# cosmic-control-center

./: Cargo.toml  justfile
i18n/en/: cosmic_control_center.ftl
res/: xyz.deathsgun.CosmicControlCenter.desktop  xyz.deathsgun.CosmicControlCenter.metainfo.xml
src/: main.rs  window.rs
